--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
 
 
-    <!-- <script>
+    <script>
         document.addEventListener('contextmenu', function (e)
         {
             e.preventDefault();
@@ -47,7 +47,7 @@
         };
         document.onselectstart = function () { return false; };
         document.ondragstart = function () { return false; };
-    </script> -->
+    </script>
 
 </head>
 
