--- a/index.html
+++ b/index.html
@@ -532,8 +532,8 @@
     <!-- Scripts -->
     <script src="js/version.js"></script>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+    <script src="js/info-toko.js"></script>
     <script src="js/app.js"></script>
-
 
 
 </body>
